--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
    <main class="background">
        <section class="title">
-           <h1> TIC TAC TOW </h1>
+           <h1> TIk TAk TOW </h1>
        </section>
        <section class="display">
            player <span class="display-player playerX">X</span>'s turn
